improved MapUtils#getProperty(..)